datparser/Airfoil.g4
grammar Airfoil;

airfoil: name points ;

name: NAME+;
points : point+ ;
point : x y ;
x : FLOAT ;
y : FLOAT ;
NAME : [0-9a-zA-Z]+ AIRFOIL? ;
FLOAT : [-]?[0-1]'.'[0-9]+ ;
AIRFOIL : 'AIRFOIL'{1} -> skip;
WS : [ \t\r\n]+ -> skip;
